--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	<div class="w1000">
 		<ul class='clearfix '>
 			<!-- <li class='float_six'><a href="javascript:;">首页</a></li> -->
-			<li class='float_six'><a href="javascript:;">时光轴</a></li>
-			<li class='float_six'><a href="javascript:;">火力房</a></li>
+			<li class='float_six'><a href="https://github.com/popzoo/zoo">时光轴</a></li>
+			<li class='float_six'><a href="javascript:;">监控室</a></li>
 			<li class='float_six'><a href="https://popzoo.github.io/barrage/index.html">云弹幕</a></li>
 			<li class='float_six'><a href="https://popzoo.github.io/pop/giftshow.html">礼物秀</a></li>
 			<li class='float_six'><a href="https://popzoo.github.io/pop/motorcade.html">车队展</a></li>
