--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 			<div class="middle_line"></div>
 		</div>
 	</div>
-	<div class="w1000 tc body" style="font-size: 16px;color:white;">
-		<p>适用浏览器：360、FireFox、Chrome、Safari、Opera、傲游、搜狗、世界之窗. 不支持IE8及以下浏览器。</p>
+	<div class="w1000 tc body" style="font-size: 16px;color:orange;background-color: rgba(53,53,53,0.7);border-radius: 6px;">
+		<p>All Reserved Collected From Jade Bone</p>
 	</div>
 	<canvas id="demo-canvas" style="position:fixed ;bottom: 10px; z-index:-1;"></canvas>
 </div>
