--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<div class="w1000 tc body" >
 		<p style="font-size: 34px;font-weight: 600;color: blue;margin-top: 20px;">时光轴的记忆</p>
 		<h3 class='header'>点滴努力，技术栈线</h3>
-		<p class='header' style="font-size: 22px;font-weight:600;">点击屏幕右中的聊天图标与人工智能AI小思互动吧</p>
+		<p class='header' style="font-size: 22px;">点击屏幕右中的聊天图标与人工智能AI小思互动吧</p>
 		<div class="event_wrap clearfix">
 			<div class="middle_line"></div>
 		</div>
