--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta content="lvlanxing" name="author">
 <title>时光轴</title>
-<link rel="shortcut icon" href="https://raw.githubusercontent.com/popzoo/pop/master/images/favicon.ico"> 
+<link rel="shortcut icon" href="https://rawcdn.githack.com/popzoo/pop/79682f53c37c8d228a76245291d9de41e3628a81/images/favicon.ico"> 
+<!-- https://raw.githubusercontent.com/popzoo/pop/master/images/favicon.ico -->
 <meta content="时光轴,时间轴,技术路线,版本迭代,竖版时光轴" name="Keywords">
 <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan style='display:none;' id='cnzz_stat_icon_1278032070'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "v1.cnzz.com/z_stat.php%3Fid%3D1278032070%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>
 <link rel="stylesheet" href="css/time_line.css">
@@ -302,11 +303,11 @@ $(function(){
 	{
 		'months' : 2,
 		'times' :'V0.6.0',
-		'even' :'增加弹幕备选方案，当AI机器人挂掉后自动启用云弹幕功能替代，扩充云弹幕语料库'
+		'even' :'新增天威幻神和年度神豪动态弹幕logo，新增房管图标，增加弹幕负载均衡，过滤AI白话，修复聊天bug'
 	},{
 		'months' : 5,
 		'times' :'V0.6.1',
-		'even' :'……待定……'	
+		'even' :'增加cdn加速云弹幕接口，由于之前访问github接口太过于频繁，被github限制接口访问速度，用cdn来提速'	
 	},{
 		'months' : 8,
 		'times' :'V0.6.2',
