--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 		<ul class='clearfix'>
 			<!-- <li class='float_six'><a href="javascript:;">首页</a></li> -->
 			<li class='float_six'><a href="https://popzoo.github.io/zoo/" style="color:gold;">时光轴</a></li>
-			<li class='float_six'><a href="https://popzoo.github.io/pop/fireroom.html" style="color:gold;">火力房</a></li>
-			<!-- <li class='float_six'><a href="javascript:alert('功能还待开发');" style="color:gold;">火力房</a></li> -->
-			<li class='float_six'><a href="https://popzoo.github.io/barrage/" style="color:gold;">云弹幕</a></li>
+			<!-- <li class='float_six'><a href="https://popzoo.github.io/pop/fireroom.html" style="color:gold;">火力房</a></li></li> -->
+			<li class='float_six'><a href="javascript:alert('功能需要优化，请三日后再访问');" style="color:gold;">火力房</a></li> 
+			<li class='float_six'><a href="https://popzoo.github.io/barrage/" style="color:gold;">云弹幕</a>
 			<li class='float_six'><a href="https://popzoo.github.io/pop/giftshow.html" style="color:gold;">礼物秀</a></li>
 			<li class='float_six'><a href="https://popzoo.github.io/pop/motorcade.html" style="color:gold;">车队展</a></li>
 			<li class='float_six'><a href="https://greasyfork.org/zh-CN/scripts/389379" style="color:gold;">GreaseFork</a></li>
