--- a/danmuManual.html
+++ b/danmuManual.html
@@ -27,7 +27,9 @@
 			<li class='float_six'><a href="https://greasyfork.org/zh-CN/scripts/389379" style="color:gold;text-decoration:none;">GreaseFork</a></li>
 		</ul>
 	</div>
-	<div style="text-align: left; max-width: 900px; margin: 0 auto 0;padding: 0 30px; background-color: rgba(235,235,235,0.7);border-radius: 10px; ">
+
+	<div style="text-align: left; max-width: 900px; margin: 0 auto 0;padding: 0 30px; background-color: rgba(235,235,235,0.7);border-radius: 10px;">
+    <!-- <div style="text-align: left; max-width: 900px; margin: 0 auto 0;padding: 0 30px; background-color: rgba(202,225,255,0.7);border-radius: 10px;"> -->
       <h1 style="font-size:22pt; line-height:150%; margin:17pt 0pt 16.5pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:center; widows:0">
         <span style="font-family:等线; font-size:22pt; font-weight:bold">自定义私有云弹幕教程</span></h1>
       <p style="font-size:14pt; line-height:150%; margin:0pt; orphans:0; text-align:justify; text-indent:21pt; widows:0">
@@ -204,17 +206,13 @@
         <span style="font-family:等线; font-size:12pt">&#xa0;</span></p>
     </div>
     <br>
-	<footer class="statcss">
-		<p>ALL COPYRIGHT RESERVED || DATA COLLETCTED FROM JADEBONE</p>
-		<div style="color:orange;text-decoration: none;">
-			<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1278032070'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "v1.cnzz.com/z_stat.php%3Fid%3D1278032070%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
-		</div>
+	<!-- <footer class="statcss" style="background-color: rgba(202,225,255,0.7);"> -->
+    <footer class="statcss" style="background-color: rgba(235,235,235,0.6);">
+		<p style="color:purple;">ALL COPYRIGHT RESERVED || DATA COLLETCTED FROM JADEBONE</p>
+		<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1278032070'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "v1.cnzz.com/z_stat.php%3Fid%3D1278032070%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
 	</footer>
 	<canvas id="demo-canvas" style="position:fixed ;bottom: 10px; z-index:-1;"></canvas>
 </div>
 <script src="js/spirit_bubble.js"></script>
-<script type="text/javascript">
-
-</script>
 </body>
 </html>
