--- a/danmuManual.html
+++ b/danmuManual.html
@@ -44,7 +44,7 @@
           <span style="color:#0563c1; font-family:等线; font-size:12pt; font-weight:bold; text-decoration:underline">https://cdn.statically.io/gh/popzoo/barrage/master/json/template.json</span></a>
       </p>
       <p style="font-size:12pt; line-height:150%; margin-left: 24px; orphans:0; text-align:justify; widows:0">
-        <img src="https://rawcdn.githack.com/popzoo/zoo/c2793424f70a885caa84efa89458c02f5bc0df6f/img/cb49ccde-56f1-4380-93f9-33c24e775dd9.001.png" width="550" height="366" alt="" /></p>
+        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_1.png" width="550" height="366" alt="" /></p>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
         <span style="font-family:等线; font-size:12pt; font-weight:bold">Ctrl+S保存到本地为json文件格式。也可以下载目前公用的云弹幕，不过体积较大，而且需要格式化</span>
         <a style="color:#0563c1" href="https://cdn.statically.io/gh/popzoo/barrage/master/danmu.json">
@@ -125,7 +125,7 @@
         <span style="font-family:Tahoma; font-size:11pt">}</span></p>
     </div>
       <p style="font-size:12pt; line-height:150%; margin-left: 115px; orphans:0; text-align:justify; widows:0">
-        <img src="https://rawcdn.githack.com/popzoo/zoo/c2793424f70a885caa84efa89458c02f5bc0df6f/img/cb49ccde-56f1-4380-93f9-33c24e775dd9.002.png" width="327" height="137" alt="图片" /></p>
+        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_2.png" width="327" height="137" alt="图片" /></p>
       <p style="font-size:12pt; line-height:150%; margin:0pt; orphans:0; text-align:justify; widows:0">
         <span style="font-family:等线; font-size:12pt">这个就是data的二级标题（如王者荣耀、和平解决、颜值等详细类别）对应上图中房间的二级标题（二者一定要一致才起作用）。</span>
       </p>
@@ -151,7 +151,7 @@
         <span style="font-family:等线; font-size:12pt">Winning-中奖弹幕，比如参加火力全开，活动结束发现中奖名单里有自己，则会自动发送此类弹幕进行感谢房管或主播。发送频率为火力全开的结束时间点。（不建议为空，否则总会发送脚本默认-“哈哈，中奖了”）</span>
       </p>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 42pt; orphans:0; text-align:justify; widows:0">
-        <img src="https://rawcdn.githack.com/popzoo/zoo/c2793424f70a885caa84efa89458c02f5bc0df6f/img/cb49ccde-56f1-4380-93f9-33c24e775dd9.003.png" width="448" height="22" alt="" style="-aw-left-pos:0pt; -aw-rel-hpos:column; -aw-rel-vpos:paragraph; -aw-top-pos:0pt; -aw-wrap-type:inline" /></p>
+        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_3.png" width="448" height="22" alt="" style="-aw-left-pos:0pt; -aw-rel-hpos:column; -aw-rel-vpos:paragraph; -aw-top-pos:0pt; -aw-wrap-type:inline" /></p>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 42pt; orphans:0; text-align:justify; text-indent:-21pt; widows:0">
         <span style="font-family:Wingdings; font-size:12pt"></span>
         <span style="font-family:等线; font-size:12pt">Noprize-没奖弹幕，和上面的正好相反，火力全开结束后发现自己没中奖，则会发送此类弹幕吐槽诉苦下下。（不建议为空，否则总发送默认-“有么得中，蓝瘦”）</span>
@@ -175,7 +175,7 @@
           <span style="font-family:等线; font-size:12pt; font-weight:bold">下面这段话主要给不了解json的小白解释的，如果这还不懂，就别@作者大大了，自行百度学习吧，当然发红包除外哈。格式主要以格式中的{}(大括号)，[](中括号)，：(冒号)，""(引号)，和,(逗号)都要用英文半角输入，否则会报错，每个双引号内为一条弹幕内容，在双引号内的的符号(比如"主播好美，么么哒！")的符号，您可以随便用中文的逗号和叹号等。</span>
       </p>
       <p style="font-size:12pt; line-height:150%; margin-left: 24px; orphans:0; text-align:justify;">
-        <img src="https://rawcdn.githack.com/popzoo/zoo/c2793424f70a885caa84efa89458c02f5bc0df6f/img/cb49ccde-56f1-4380-93f9-33c24e775dd9.004.png" width="615" height="402"/></p>
+        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_4.png" width="615" height="402"/></p>
       <ol start="5" type="1" style="margin:0pt; padding-left:0pt">
         <li style="font-family:等线; font-size:12pt; font-weight:bold; line-height:150%; margin:0pt 0pt 0pt 14pt; orphans:0; padding-left:4pt; text-align:justify; text-indent:0pt; widows:0">
           <span style="font-family:等线; font-size:12pt; font-weight:bold">5.弹幕文件准备好了，介绍到这里我们的旅程就快要结束了，但在此之前，我们还有最最关键的一步，把自定义私有云弹幕库，放到网上，这样无论您切换到哪台电脑（家里或单位），都可以使用自己的云弹幕库。下面吧json文件的名字改为自己斗鱼的昵称（要严格一致），比如我斗鱼的昵称叫”五花肉”，那么我的自定义弹幕文件名字为“五花肉.json”，不要有空格等。然后来到网址</span>
@@ -185,11 +185,11 @@
           <span style="font-family:等线; font-size:12pt; font-weight:bold">点击 “ 选择文件 ” ，或者将自己的文件 直接拖拽到选择文件正上方，然后 页面会自定识别并判断您的私有弹幕是否符合规则，不符合规则会提示您更改意见</span>
       </ol>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
-        <img src="https://rawcdn.githack.com/popzoo/zoo/c2793424f70a885caa84efa89458c02f5bc0df6f/img/cb49ccde-56f1-4380-93f9-33c24e775dd9.005.png" width="533" height="170" alt="" style="-aw-left-pos:0pt; -aw-rel-hpos:column; -aw-rel-vpos:paragraph; -aw-top-pos:0pt; -aw-wrap-type:inline" /></p>
+        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_5.png" width="533" height="170" alt="" style="-aw-left-pos:0pt; -aw-rel-hpos:column; -aw-rel-vpos:paragraph; -aw-top-pos:0pt; -aw-wrap-type:inline" /></p>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
         <span style="font-family:等线; font-size:12pt; font-weight:bold">符合规则则出现下面提示框。这说明您最后一步成功了，下面就可以去脚本内找个火力房间试试效果喽。目前仅支持文本5MB的内容，如果全是文本已经非常大了，一部上百万字的小说的文字量。所以尽情的用吧! </span>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
-        <img src="https://rawcdn.githack.com/popzoo/zoo/c2793424f70a885caa84efa89458c02f5bc0df6f/img/cb49ccde-56f1-4380-93f9-33c24e775dd9.006.png" width="452" height="157"/></p>        
+        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_6.png" width="452" height="157"/></p>        
       </p>
       <p style="margin:0pt; orphans:0; text-align:justify; text-indent:18pt; widows:0">
         <br />
