--- a/danmuManual.html
+++ b/danmuManual.html
@@ -187,11 +187,15 @@
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
         <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_5.png" width="533" height="170" alt="" style="-aw-left-pos:0pt; -aw-rel-hpos:column; -aw-rel-vpos:paragraph; -aw-top-pos:0pt; -aw-wrap-type:inline" /></p>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
-        <span style="font-family:等线; font-size:12pt; font-weight:bold">符合规则则出现下面提示框。这说明您最后一步成功了，下面就可以去脚本内找个火力房间试试效果喽。目前仅支持文本5MB的内容，如果全是文本已经非常大了，一部上百万字的小说的文字量。所以尽情的用吧! </span>
+        <span style="font-family:等线; font-size:12pt; font-weight:bold">符合规则则出现下面提示框。这说明您最后一步成功了，下面就可以去脚本内找个火力房间试试效果喽。目前仅支持文本5MB的内容，如果全是文本已经非常大了，一部上百万字的小说的文字量。所以尽情的用吧! </span></p>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
         <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_6.png" width="452" height="157"/></p>        
       </p>
-      <p style="margin:0pt; orphans:0; text-align:justify; text-indent:18pt; widows:0">
+      <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
+        <span style="font-family:等线; font-size:12pt; font-weight:bold">上传成功后，回到火力脚本，在任意直播间刷新页面后，F12查看控制台,如果出现下图图的字样，说明您的私有云弹幕已经被启用了，Bingo,快去开心滴玩耍吧！少年！</span></p>
+      <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
+        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_7.png" width="466" height="210"/></p>        
+      </p>
         <br />
         <span style="font-family:'等线 Light'; font-size:16pt; font-weight:800;">特别说明</span></p>
       <p style="margin:0pt; orphans:0; text-align:justify; text-indent:21pt; widows:0">
