--- a/danmuManual.html
+++ b/danmuManual.html
@@ -124,11 +124,6 @@
       <p style="margin:3.75pt 0pt">
         <span style="font-family:Tahoma; font-size:11pt">}</span></p>
     </div>
-      <p style="font-size:12pt; line-height:150%; margin-left: 115px; orphans:0; text-align:justify; widows:0">
-        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_2.png" width="327" height="137" alt="图片" /></p>
-      <p style="font-size:12pt; line-height:150%; margin:0pt; orphans:0; text-align:justify; widows:0">
-        <span style="font-family:等线; font-size:12pt">这个就是data的二级标题（如王者荣耀、和平解决、颜值等详细类别）对应上图中房间的二级标题（二者一定要一致才起作用）。</span>
-      </p>
       <ol start="3" type="1" style="margin:0pt; padding-left:0pt">
         <li style="font-family:等线; font-size:12pt; font-weight:bold; line-height:150%; margin:0pt 0pt 0pt 14pt; orphans:0; padding-left:4pt; text-align:justify; text-indent:0pt; widows:0">
           <span style="font-family:等线; font-size:12pt; font-weight:bold">下面详细介绍云弹幕的发送</span>
@@ -144,8 +139,11 @@
       </p>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 42pt; orphans:0; text-align:justify; text-indent:-21pt; widows:0">
         <span style="font-family:Wingdings; font-size:12pt"></span>
-        <span style="font-family:等线; font-size:12pt">房间二级标题类（如王者荣耀，和平精英、舞蹈、颜值等），这个是根据房间的二级标题类分类的，支持斗鱼所有房间二级标题分类，比如您特别喜欢看绝地求生类的吃鸡游戏，这里可以专门定义此类弹幕，标题头写“绝地求生”，内容为“大吉大利，赶快恰鸡”，“天命圈砸脸了”……脚本会根据当前房间的二级类别，自动匹配类别弹幕，这也是弹幕体系最为精华的部分，因为可以因房间而异，进一步降低被识别为机器人的风险，建议大家多多备用一些经常光顾某类房间的弹幕，发送频率为1；（可以为空）</span>
+        <span style="font-family:等线; font-size:12pt">房间二级标题区(如王者荣耀，和平精英、舞蹈、颜值等)，这个是根据房间的二级标题类分类的，支持斗鱼所有房间二级标题分类，比如您特别喜欢看绝地求生类的吃鸡游戏，这里可以专门定义此类弹幕，标题头写“绝地求生”，内容为“大吉大利，赶快恰鸡”，“天命圈砸脸了”……脚本会根据当前房间的二级标题，自动匹配到标题后面的弹幕内容，这也是弹幕体系最为精华的部分，因为可以因房间而异，进一步降低被识别为机器人的风险，建议大家多多备用一些经常光顾某类房间的弹幕，发送频率为1；（可以为空）</span>
       </p>
+      <p style="font-size:12pt; line-height:150%; margin-left: 44px; orphans:0; text-align:justify; widows:0">
+        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_2.png" width="561" height="134" alt="图片" /></p>
+      <p style="font-size:12pt; line-height:150%; margin:0pt; orphans:0; text-align:justify; widows:0">
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 42pt; orphans:0; text-align:justify; text-indent:-21pt; widows:0">
         <span style="font-family:Wingdings; font-size:12pt"></span>
         <span style="font-family:等线; font-size:12pt">Winning-中奖弹幕，比如参加火力全开，活动结束发现中奖名单里有自己，则会自动发送此类弹幕进行感谢房管或主播。发送频率为火力全开的结束时间点。（不建议为空，否则总会发送脚本默认-“哈哈，中奖了”）</span>
@@ -192,7 +190,7 @@
         <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_6.png" width="452" height="157"/></p>        
       </p>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
-        <span style="font-family:等线; font-size:12pt; font-weight:bold">上传成功后，回到火力脚本，在任意直播间刷新页面后，F12查看控制台,如果出现下图图的字样，说明您的私有云弹幕已经被启用了，Bingo,快去开心滴玩耍吧！少年！</span></p>
+        <span style="font-family:等线; font-size:12pt; font-weight:bold">上传成功后，回到火力脚本，在任意直播间刷新页面后，F12查看控制台,如果出现下图的字样，说明您的私有专属云弹幕已经被启用了，Bingo,快去开心滴玩耍吧！少年！</span></p>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
         <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_7.png" width="466" height="210"/></p>        
       </p>
