--- a/danmuManual.html
+++ b/danmuManual.html
@@ -29,11 +29,10 @@
 	</div>
 
 	<div style="text-align: left; max-width: 900px; margin: 0 auto 0;padding: 0 30px; background-color: rgba(235,235,235,0.7);border-radius: 10px;">
-    <!-- <div style="text-align: left; max-width: 900px; margin: 0 auto 0;padding: 0 30px; background-color: rgba(202,225,255,0.7);border-radius: 10px;"> -->
-      <h1 style="font-size:22pt; line-height:150%; margin:17pt 0pt 16.5pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:center; widows:0">
+      <h1 style="font-size:22pt; line-height:150%; margin:17pt 0pt 16.5pt;padding-top: 15px; page-break-after:avoid; page-break-inside:avoid; text-align:center; widows:0">
         <span style="font-family:等线; font-size:22pt; font-weight:bold">自定义私有云弹幕教程</span></h1>
       <p style="font-size:14pt; line-height:150%; margin:0pt; orphans:0; text-align:justify; text-indent:21pt; widows:0">
-        <span style="font-family:等线; font-size:14pt; font-weight:bold;">应水友的强烈要求和吐槽(大都吐槽AI机器人太沙雕萌新)之下，增加了自定义私有云弹幕功能，后缀格式为.json文本弹幕，文本限制小于5MB(只要会用word的小白按照步骤都可以配置成功)，需要注意的是此云弹幕需要配合<a href="https://greasyfork.org/zh-CN/scripts/389379" target="_blank">斗鱼自动搜火力脚本</a>版本号0.6.9以上才支持。</span></p>
+        <span style="font-family:等线; font-size:14pt; font-weight:bold;">应水友的强烈要求和吐槽(大都吐槽AI机器人太沙雕萌新)之下，且云弹幕库内容太过陈旧内容有限(目前火力脚本采用AI智能聊天+云弹幕库混用)，所以增加了自定义私有云弹幕功能。这里采用JSON格式的文本弹幕，优点是轻量级、易编辑、速度快，文本限制小于5MB(只要会用word的小白按照步骤都可以配置成功)，需要注意的是此云弹幕需要配合<a href="https://greasyfork.org/zh-CN/scripts/389379" target="_blank">斗鱼自动搜火力脚本</a>版本号0.6.9以上才支持。</span></p>
       <ol type="1" style="margin:0pt; padding-left:0pt">
         <li style="font-family:等线; font-size:12pt; font-weight:bold; line-height:150%; margin:0pt 0pt 0pt 14pt; orphans:0; padding-left:4pt; text-align:justify; text-indent:0pt; widows:0">
           <span style="font-family:等线; font-size:12pt; font-weight:bold">1. 首先去下面链接下载云弹幕定制模板，文件内容见下面图片</span></li>
@@ -49,7 +48,7 @@
         <span style="font-family:等线; font-size:12pt; font-weight:bold">Ctrl+S保存到本地为json文件格式。也可以下载目前公用的云弹幕，不过体积较大，而且需要格式化</span>
         <a style="color:#0563c1" href="https://cdn.statically.io/gh/popzoo/barrage/master/danmu.json">
           <span style="color:#0563c1; font-family:等线; font-size:12pt; font-weight:bold; text-decoration:underline">https://cdn.statically.io/gh/popzoo/barrage/master/danmu.json</span></a>
-        <span style="font-family:等线; font-size:12pt; font-weight:bold">，BeJson网址格式化文本。</span>
+        <span style="font-family:等线; font-size:12pt; font-weight:bold">，BeJson网址格式化json文本，</span>
         <a style="color:#0563c1" href="http://www.bejson.com/">
           <span style="color:#0563c1; font-family:等线; font-size:12pt; font-weight:bold; text-decoration:underline">http://www.bejson.com/</span></a>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
@@ -176,11 +175,11 @@
         <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_4.png" width="615" height="402"/></p>
       <ol start="5" type="1" style="margin:0pt; padding-left:0pt">
         <li style="font-family:等线; font-size:12pt; font-weight:bold; line-height:150%; margin:0pt 0pt 0pt 14pt; orphans:0; padding-left:4pt; text-align:justify; text-indent:0pt; widows:0">
-          <span style="font-family:等线; font-size:12pt; font-weight:bold">5.弹幕文件准备好了，介绍到这里我们的旅程就快要结束了，但在此之前，我们还有最最关键的一步，把自定义私有云弹幕库，放到网上，这样无论您切换到哪台电脑（家里或单位），都可以使用自己的云弹幕库。下面吧json文件的名字改为自己斗鱼的昵称（要严格一致），比如我斗鱼的昵称叫”五花肉”，那么我的自定义弹幕文件名字为“五花肉.json”，不要有空格等。然后来到网址</span>
+          <span style="font-family:等线; font-size:12pt; font-weight:bold">5.弹幕文件准备好了，介绍到这里我们的旅程就快要结束了，但在此之前，我们还有最最关键的一步，把自定义私有云弹幕库，放到网上，这样无论您切换到哪台电脑（家里或单位），都可以使用自己的云弹幕库。下面把json文件的名字改为自己斗鱼的昵称（要严格一致），比如我斗鱼的昵称叫”五花肉”，那么我的自定义弹幕文件名字为“五花肉.json”，不要有空格回车等无用占位符号。然后来到网址</span>
           <a style="color:#0563c1" href="https://popzoo.github.io/barrage/">
             <span style="color:#0563c1; font-family:等线; font-size:12pt; font-weight:bold; text-decoration:underline">https://popzoo.github.io/barrage/</span>
           </a>
-          <span style="font-family:等线; font-size:12pt; font-weight:bold">点击 “ 选择文件 ” ，或者将自己的文件 直接拖拽到选择文件正上方，然后 页面会自定识别并判断您的私有弹幕是否符合规则，不符合规则会提示您更改意见</span>
+          <span style="font-family:等线; font-size:12pt; font-weight:bold">点击 “ 选择文件 ” ，或者将自己的文件 直接拖拽到选择文件正上方，然后 页面会自定识别并判断您的私有弹幕是否符合规则，不符合规则会提示您更改意见。</span>
       </ol>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
         <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_5.png" width="533" height="170" alt="" style="-aw-left-pos:0pt; -aw-rel-hpos:column; -aw-rel-vpos:paragraph; -aw-top-pos:0pt; -aw-wrap-type:inline" /></p>
@@ -197,17 +196,17 @@
         <br />
         <span style="font-family:'等线 Light'; font-size:16pt; font-weight:800;">特别说明</span></p>
       <p style="margin:0pt; orphans:0; text-align:justify; text-indent:21pt; widows:0">
-        <span style="font-family:等线;line-height: 22px; font-size:12pt">上面所有的配置是跟随用户账号关联的，出于安全考虑，生成的云弹幕链接属于程序专属应用使用，不能公共访问生成的云弹幕链接（也没有公开链接），主要防止别人盗用您的云弹幕链接，目前初期阶段还提供了用户名下载云弹幕功能，方便大家异地编写云端库。由于是昵称名匹配设置，所以每个账户对应一个云弹幕库，新上传的云弹幕文件会自动覆盖旧版的云弹幕文件，此过程不可逆。后期会提高安全措施，增加些验证或秘钥，防止他人知道您的昵称后任意下载您的弹幕库内容。</span>
+        <span style="font-family:等线;line-height: 22px; font-size:12pt">上面所有的配置是跟随用户账号关联的，出于安全考虑，生成的云弹幕链接属于脚本程序专属应用使用，不能公共访问生成的云弹幕链接（所以没公开链接地址），主要防止别人通过链接直接盗用您的云弹幕文案，目前初期阶段还提供了用户名下载云弹幕功能，方便大家异地编写云端库。由于是昵称名匹配设置，所以每个账户对应一个云弹幕库，新上传的云弹幕文件会自动覆盖旧版的云弹幕文件，此过程不可逆。后期会提高安全措施，增加些验证或秘钥，防止他人知道您的昵称后任意下载您的弹幕库内容。</span>
         <br />
-        <span style="font-family:等线; font-size:12pt">如有不足和意见欢迎给作者发email：</span>
+        <span style="font-family:等线; font-size:12pt;">如有不足和意见欢迎给作者发email：</span>
         <a style="color:#0563c1" href="mailto:地址为lvlanxing@gmail.com">
           <span style="color:#0563c1; font-family:等线; font-size:12pt; text-decoration:underline">lvlanxing@gmail.com</span>
         </a>
         <span style="font-family:等线; font-size:12pt">，希望大家多多支持！</span>
-        <br />
+        <br/>
         <span style="font-family:等线; font-size:12pt">&#xa0;</span></p>
     </div>
-    <br>
+    <br/>
 	<!-- <footer class="statcss" style="background-color: rgba(202,225,255,0.7);"> -->
     <footer class="statcss" style="background-color: rgba(235,235,235,0.6);">
 		<p style="color:purple;">ALL COPYRIGHT RESERVED || DATA COLLETCTED FROM JADEBONE</p>
