--- a/index.html
+++ b/index.html
@@ -50,6 +50,26 @@
 $(function(){//，，极速
 	var bigEvent =[
 	{
+	'year' : '捐助',
+	'events' :[
+	{
+		'months' : 3,
+		'times' :'五花肉变成**',
+		'even' :'打赏￥5元大洋，恩人古道热肠，雪中送炭！'
+	},{
+		'months' : 3,
+		'times' :'我的第220位**',
+		'even' :'豪掷￥5元大钞，贵人仗义疏财，乐善好施！'		
+	},{
+		'months' : 8,
+		'times' :'没了~',
+		'even' :'This building need a kind person!'
+	},{
+		'months' : 8,
+		'times' :'木有~',
+		'even' :'Only donator can site this place!'	
+	}]},	
+	{
 	'year' : '下拉',
 	'events' :[
 	{
@@ -352,19 +372,19 @@ $(function(){//，，极速
 	{
 		'months' : 3,
 		'times' :'点滴积累',
-		'even' :'衣带渐宽终不悔'
+		'even' :'============恶人隔离带=============================='
 	},{
 		'months' : 3,
-		'times' :'海纳百川',
-		'even' :'项目敲定方安睡'		
-	},{
-		'months' : 8,
 		'times' :'未来可期',
-		'even' :'苟利一天轻松矣'
+		'even' :'============恶人隔离带============================='		
 	},{
 		'months' : 8,
-		'times' :'砥砺前行',
-		'even' :'打开斗鱼开心笑'	
+		'times' :'楼底镇压大恶人—武林恶名[到此一游**]',
+		'even' :'抄袭偶的弹幕文案，用偶的脚本，还倒打一耙，这种无赖大恶人，必须镇压九幽冥火之地狱，焚魂灼魄！'
+	},{
+		'months' : 8,
+		'times' :'楼底镇压大恶人—江湖臭名[有事别找我**]',
+		'even' :'没得罪的人莫名其妙的就和我有仇，三番两次的来没事找茬，必须镇压在尸魂魔窟之深渊，不见天日！'	
 	}
 	]}];
 	$('.event_wrap').eventFlow({'events':bigEvent});
