--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
 	</div>
 	<div class="w1000 tc body" >
 		<p style="font-size: 34px;font-weight: 600;color: blue;margin-top: 20px;">时光轴的记忆</p>
-		<h3 class='header' style="background-color: rgba(53,53,53,0);">点滴努力，技术栈线</h3>
+		<h3 class='header' style="font-size: 28px; background-color: rgba(53,53,53,0);">大人的慷慨打赏，作者的孜孜矻矻！</h3>
+    	<table style="margin: 0 auto 0;"><tr>
+    	    <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/Alipay.png" width="60%"></td>
+    	    <td></td>
+    	    <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/WeChat.png" width="60%"></td>
+    	</tr></table>		
 		<p class='header' style="font-size: 22px;background-color: rgba(53,53,53,0);">点击屏幕右中的聊天图标与人工智能AI小思互动吧</p>
 		<div class="event_wrap clearfix">
 			<div class="middle_line"></div>
