--- a/index.html
+++ b/index.html
@@ -357,11 +357,11 @@ $(function(){//，，极速
 	},{
 		'months' : 4,
 		'times' :'V0.6.6',
-		'even' :'修复因斗鱼升级导致的火力全开跳转接口失效问题，修复无手机绑定时鱼塘自动领鱼粮，出现无限弹窗的bug，修改fireinfo的持久化机制'	
+		'even' :'修复因斗鱼升级导致的火力全开跳转接口失效问题，修复无手机绑定时点鱼塘出现无限弹窗bug，修改fireinfo持久化'	
 	},{
 		'months' : 6,
 		'times' :'V0.6.7',
-		'even' :'修复二合一功能超过火力等待时间不自动跳转的问题，清除每日跳转次数的历史数据，新增加火力等待和跳转上限用户自定义参数'	
+		'even' :'修复二合一功能超过火力等待时间不自动跳转，清除每日跳转历史数据，新增加火力等待和跳转上限用户自定义参数'	
 	},{
 		'months' : 8,
 		'times' :'V0.6.8',
@@ -369,7 +369,7 @@ $(function(){//，，极速
 	},{
 		'months' : 10,
 		'times' :'V0.6.9',
-		'even' :'……待定……'							
+		'even' :'新增自定义云弹幕功能，上传自己专属的云弹幕，文件名与斗鱼昵称一致，格式为json'							
 	}]},		
 	{
 	'year' : '未来',
