--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
 <script src='js/jquery.eventFlow.js'></script>
 <script type="text/javascript" src="https://robot.ownthink.com/bot/js/robot.js"></script>
 <script>
-$(function(){//极速
+$(function(){//极速 	#FFBBFF
 	var bigEvent =[
 	{
 	'year' : '捐助',
 	'events' :[
 	{
 		'months' : 3,
-		'times' :'楼顶供奉恩公威名【五花肉变成**】',
-		'even' :'打赏￥5元大洋，恩人古道热肠，雪中送炭！'
+		'times' :'<span style="color:#FFBBFF;">楼顶供奉恩公威名【五花肉变成**】</span>',
+		'even' :'<span style="color:#FF83FA;">打赏￥5元大洋，恩人古道热肠，雪中送炭！</span>'
 	},{
 		'months' : 3,
-		'times' :'楼顶供奉贵人大名【我的第220位**】',
-		'even' :'豪掷￥5元大钞，贵人仗义疏财，乐善好施！'		
+		'times' :'<span style="color:#FFBBFF;">楼顶供奉贵人大名【我的第220位**】</span>',
+		'even' :'<span style="color:#FF83FA;">豪掷￥5元大钞，贵人仗义疏财，乐善好施！</span>'		
 	},{
 		'months' : 8,
 		'times' :'♨♨♨♨♨♨氤氲缭绕♨♨♨♨♨♨',
@@ -73,27 +73,48 @@ $(function(){//极速
 		'months' : 8,
 		'times' :'♨♨♨♨♨♨供奉香火♨♨♨♨♨♨',
 		'even' :'Only donator can site this place!'	
-	}]},	
+	}]},
 	{
-	'year' : '下拉',
+	// 'year' : '<a href="https://popzoo.github.io/zoo/hiddenManual.html" target="_blank" style="color:magenta;">点赞</a>',
+	'year' : '<a href="https://popzoo.github.io/zoo/hiddenFlower.html" target="_blank" style="color:#FF83FA;">点赞</a>',
 	'events' :[
 	{
 		'months' : 3,
-		'times' :'睥睨水友',
-		'even' :'满级粉丝牌子-有撒~'
+		'times' :'<span style="color:greenyellow;">开启隐藏之路</span>',
+		'even' :'<span style="color:lawngreen;">隐藏功能需要用户上传私有弹幕后便可使用，主要是公有弹幕被好多人霸屏滥用的一塌糊涂！</span>'
 	},{
 		'months' : 3,
-		'times' :'笑傲鱼塘',
-		'even' :'幻神弹幕特效-有撒~'		
+		'times' :'<span style="color:greenyellow;">点赞无私捐助</span>',
+		'even' :'<span style="color:lawngreen;">点击上方紫色字体的“点赞”按钮后，即可跳转到获取隐藏功能的详细使用教程的页面！</span>'		
 	},{
 		'months' : 8,
-		'times' :'鲸吞万象',
-		'even' :'签到手速王-全都有撒'
+		'times' :'火力横扫，足迹万千',
+		'even' :'签到手速王，顶级车队logo'
 	},{
 		'months' : 8,
-		'times' :'火力横扫',
-		'even' :'顶级车队logo-有撒~'	
-	}]},
+		'times' :'笑傲鱼塘，睥睨水友',
+		'even' :'满级粉丝牌子，幻神弹幕特效'	
+	}]},	
+	// {
+	// 'year' : '<a href="https://popzoo.github.io/zoo/hiddenManual.html" target="_blank">点赞</a>',
+	// 'events' :[
+	// {
+	// 	'months' : 3,
+	// 	'times' :'睥睨水友',
+	// 	'even' :'满级粉丝牌子-有撒~'
+	// },{
+	// 	'months' : 3,
+	// 	'times' :'笑傲鱼塘',
+	// 	'even' :'幻神弹幕特效-有撒~'		
+	// },{
+	// 	'months' : 8,
+	// 	'times' :'鲸吞万象',
+	// 	'even' :'签到手速王-全都有撒'
+	// },{
+	// 	'months' : 8,
+	// 	'times' :'火力横扫',
+	// 	'even' :'顶级车队logo-有撒~'	
+	// }]},
 	{
 	'year':"起点",
 	'events' :[
@@ -372,24 +393,24 @@ $(function(){//极速
 		'even' :'新增自定义云弹幕功能，上传自己专属的云弹幕，文件名与斗鱼昵称一致，格式为json'							
 	}]},		
 	{
-	'year' : '未来',
+	'year' : '除恶',
 	'events' :[
 	{
 		'months' : 3,
-		'times' :'点滴积累',
-		'even' :'⚡⚡⚡⚡⚡⚡毒瘴灭魔⚡⚡⚡⚡⚡⚡'
+		'times' :'不忘初心',
+		'even' :'⚡⚡⚡⚡⚡⚡地瘴灭魔⚡⚡⚡⚡⚡⚡'
 	},{
 		'months' : 3,
-		'times' :'未来可期',
+		'times' :'扫黑除恶',
 		'even' :'⚡⚡⚡⚡⚡⚡天雷诛邪⚡⚡⚡⚡⚡⚡'		
 	},{
 		'months' : 8,
-		'times' :'楼底镇压大恶人-武林恶名[到此一游**]',
-		'even' :'抄袭偶的弹幕文案，用偶的脚本，还倒打一耙，这种无赖大恶人，必须镇压九幽冥火之地狱，焚魂灼魄！'
+		'times' :'<span style="color:red;">楼底镇压大恶人-武林恶名[到此一游**]</sapn>',
+		'even' :'<span style="color:#EE3B3B;">抄袭偶的弹幕文案，用偶的脚本，还反咬一口，这种无赖大恶人，必须镇压九幽冥火之地狱，焚魂灼魄！</sapn>'
 	},{
 		'months' : 8,
-		'times' :'楼底镇压大恶人-江湖臭名[有事别找我**]',
-		'even' :'没得罪的人莫名其妙的就和我有仇，三番两次的来没事找茬，必须镇压在尸魂魔窟之深渊，不见天日！'	
+		'times' :'<span style="color:red;">楼底镇压大恶人-江湖臭名[有事别找我**]</span>',
+		'even' :'<span style="color:#EE3B3B;">没得罪的人莫名其妙的就和我有仇，三番两次的来找茬，必须镇压在尸魂魔窟之深渊，不见天日！</sapn>'	
 	}
 	]}];
 	$('.event_wrap').eventFlow({'events':bigEvent});
