--- a/hiddenManual.html
+++ b/hiddenManual.html
@@ -215,7 +215,7 @@
         if(validate==="true"){
             let showManual = document.getElementById("control_show_manual");
             if(showManual!=undefined){
-                showManual.setAttribute("display","inline");
+                showManual.style.display="inline";
             }else{
                 delayLoad();
             }
