--- a/hiddenManual.html
+++ b/hiddenManual.html
@@ -215,7 +215,7 @@
         if(validate==="true"){
             let showManual = document.getElementById("control_show_manual");
             if(showManual!=undefined){
-                showManual.style.display="inline";
+                showManual.style.display="inherit";
             }else{
                 delayLoad();
             }
