--- a/index.html
+++ b/index.html
@@ -58,19 +58,27 @@ $(function(){//极速 	#FFBBFF
 	'year' : '捐助',
 	'events' :[
 	{
-		'months' : 3,
+		'months' : 2,
 		'times' :'<span style="color:#FFBBFF;">楼顶供奉恩公威名【五花肉变成**】</span>',
 		'even' :'<span style="color:#FF83FA;">打赏￥5元大洋，恩人古道热肠，雪中送炭！</span>'
 	},{
-		'months' : 3,
+		'months' : 2,
+		'times' :'<span style="color:#FFBBFF;">楼顶供奉君上大名【Pudd*Panda**】</span>',
+		'even' :'<span style="color:#FF83FA;">巨赠￥20元宝，君上财冲牛斗，神射紫薇！</span>'		
+	},{
+		'months' : 6,
+		'times' :'<span style="color:#FFBBFF;">真的木有了</span>',
+		'even' :'<span style="color:#FF83FA;">贵客盈门，蓬荜生辉，物华天宝，人杰这灵！</span>'	
+	},{
+		'months' : 6,
 		'times' :'<span style="color:#FFBBFF;">楼顶供奉贵人大名【我的第220位**】</span>',
 		'even' :'<span style="color:#FF83FA;">豪掷￥5元大钞，贵人仗义疏财，乐善好施！</span>'		
 	},{
-		'months' : 8,
+		'months' : 10,
 		'times' :'♨♨♨♨♨♨氤氲缭绕♨♨♨♨♨♨',
 		'even' :'This building need many kind of person!'
 	},{
-		'months' : 8,
+		'months' : 10,
 		'times' :'♨♨♨♨♨♨供奉香火♨♨♨♨♨♨',
 		'even' :'Only donator can site this place!'	
 	}]},
