--- a/hiddenFlower.html
+++ b/hiddenFlower.html
@@ -7,20 +7,33 @@
   <meta content="隐藏,隐藏功能,开启隐藏,开启隐藏功能" name="Keywords">
   <link rel="shortcut icon" href="https://rawcdn.githack.com/popzoo/pop/9d4121eed5cbb035e55203b8a9e56a73dcf2e6bf/images/favicon.ico"> 
   <style type="text/css">
+      *{margin:0;padding:0;list-style-type:none;}
+      a,img{border:0;}
+      body{font:12px/180% Arial, Helvetica, sans-serif, "新宋体";margin:0 0;}
+  </style>    
 </head>
 <body>
-
-<style type="text/css">
-*{margin:0;padding:0;list-style-type:none;}
-a,img{border:0;}
-body{font:12px/180% Arial, Helvetica, sans-serif, "新宋体";margin:0 0;}
-</style>
+    <a href="https://github.com/ownthink/robot/" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#444444; color:#FFAAAA; position: absolute; top: 0; border: 0; left: 0; transform: scale(-1, 1);" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg>
+    <a href="https://github.com/wolf-scream/FirePowerSeek" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#444444; color:#FFFF77; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
+    <div style="position: absolute; height:30px; color:purple; line-height:30px; margin-left: -150px; padding:5px 0 10px 50%; font-size:30px; font-family: Arial,Microsoft YaHei,'宋体';">
+        🌻隐藏功能与火力房🌻
+        <span class="collapse" style="text-align: right;white-space: nowrap; margin-right: 60px;  font-size: 20px;"> 
+            <a class="nav-link" style="text-decoration:none;color: purple;" href="https://popzoo.github.io/zoo/">时光轴</a> •
+            <a class="nav-link" style="text-decoration:none;color: purple;" href="https://popzoo.github.io/barrage/">云弹幕</a> •
+            <a class="nav-link" style="text-decoration:none;color: purple;" href="https://popzoo.github.io/pop/giftshow.html">礼物秀</a> •
+            <a class="nav-link" style="text-decoration:none;color: purple;" href="https://popzoo.github.io/pop/motorcade.html">车队展</a> •
+            <a class="nav-link" style="text-decoration:none;color: purple;" href="https://greasyfork.org/zh-CN/scripts/389379">GreaseFork</a>
+        </span>
+    </div>
     <div style="position: absolute;left: 50%; top: 20%;line-height: 35px;  text-align: center;margin-left: -240px;max-width: 490px;">
-        <h3 style="font-size: 28px;color:blue;">斗鱼火力脚本开启隐藏功能</h3>
-        <div style="font-size: 20px;text-align: left; background-color: rgba(202,225,255,0.6);border-radius: 4px;padding:10px 10px;">
+        <h3 style="font-size: 25px;color:blue;">斗鱼火力脚本开启隐藏功能和查看火力房间</h3>
+        <div style="font-size: 20px;text-align: left; background-color: rgba(202,225,255,0.6);border-radius: 6px;padding:10px 10px;">
                 <span>上传了私有云弹幕(<a style="color: red;text-decoration: none;" href="https://popzoo.github.io/barrage/" target="_blank">点击上传</a>)的用户，输入斗鱼昵称便可获取隐藏功能教程，之所以多此一举是最近火力房间充斥大量公用弹幕霸屏，弹幕被滥用的一塌糊涂，为了防止被平台针对，无奈之举还望大家谅解！</span><br/>
-            &nbsp;请输入昵称：<input type="search" id="open_hide_func" placeholder="斗鱼昵称"  style="font-size: 20px; border-radius: 4px;">
-                <input type="submit" value="开启隐藏" style="font-size: 18px;background-color: rgba(53,53,53,0.6);border-radius: 4px;" id="search_danmu"/>
+            &nbsp;斗鱼昵称：<input type="search" id="input_nick_name" placeholder="请输入您的斗鱼昵称"  style=" width:320px; font-size: 20px; border-radius: 4px;">
+            <div style="text-align: center;">
+                <input type="submit" value="开启隐藏功能" style="margin:0 15px;font-size: 18px;background-color:rgba(132,112,255,0.7);border-radius: 4px;" id="open_hide_func"/>
+                <input type="submit" value="查看火力房间" style="margin:0 15px; font-size: 18px;background-color:rgba(154,205,50,0.7);border-radius: 4px;" id="open_fire_room"/>
+            </div>
         </div>
     </div>
     <canvas id="sakura" style="z-index: -1;"></canvas>
@@ -318,10 +331,11 @@ void main(void) {
         const region = 'ap-beijing', bucket = 'danmu-1253626683';// eslint-disable-next-line
         var cos = new COS({SecretId: window.atob("QUtJRENBeFZ6RUp3VnNLY2VSZ05US3dNZGVRd0RHTkp3UGFw"),
                            SecretKey: window.atob("VW95c1h2MXhlQ2FwdGQ4dVd1QkN5YTBEQXROaGxhOVI=")});    
-        document.getElementById("search_danmu").addEventListener('click',getCOS);    
+        document.getElementById("open_hide_func").addEventListener('click',function(){getCOS(1)}); 
+        document.getElementById("open_fire_room").addEventListener('click',function(){getCOS(2)}); 
         // get cos
-        function getCOS(){
-            let nickName = document.getElementById("open_hide_func").value.trim();
+        function getCOS(code){
+            let nickName = document.getElementById("input_nick_name").value.trim();
             if(nickName!=""){
                 cos.getObject({//get one object
                     Bucket: bucket,
@@ -332,10 +346,14 @@ void main(void) {
                         alert("没有找到该昵称的私有弹幕，请检查昵称是否正确！");
                         // console.error(err || data.Body);
                     }else{//get old Array and add new item of fire room
+                            sessionStorage.setItem("personalDanmu", "true");
+                        if(code===1){
+                            window.location.href = "https://popzoo.github.io/zoo/hiddenManual.html";
+                        }else{
+                            window.location.href = "https://popzoo.github.io/pop/fireroom.html";
+                        }
                         // console.info(data.Body);
                         // saveJsonContent(data.Body,nickName+".json");
-                        sessionStorage.setItem("personalDanmu", "true");
-                        window.location.href = "https://popzoo.github.io/zoo/hiddenManual.html"
                     }
                 });
             }else{
