--- a/hiddenManual.html
+++ b/hiddenManual.html
@@ -27,7 +27,8 @@
 			<li class='float_six'><a href="https://greasyfork.org/zh-CN/scripts/389379" style="color:gold;text-decoration:none;">GreaseFork</a></li>
 		</ul>
 	</div>
-	<div id="control_show_manual" style="text-align: left; max-width: 900px; margin: 0 auto 0;padding: 0 30px; background-color: rgba(235,235,235,0.7);border-radius: 10px;display:none;">
+	<!-- <div id="control_show_manual" style="text-align: left; max-width: 900px; margin: 0 auto 0;padding: 0 30px; background-color: rgba(235,235,235,0.7);border-radius: 10px;display:inherit;"> -->
+  <div id="control_show_manual" style="text-align: left; max-width: 900px; margin: 0 auto 0;padding: 0 30px; background-color: rgba(235,235,235,0.7);border-radius: 10px;display:none;">
       <h1 style="font-size:22pt; line-height:150%; margin:17pt 0pt 16.5pt; padding-top: 15px;orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:center; widows:0">
         <span style="font-family:等线; font-size:22pt; font-weight:bold">火力AI脚本隐藏功能</span></h1>
       <p style="font-size:14pt; line-height:150%; margin:0pt; orphans:0; text-align:justify; widows:0">
@@ -38,7 +39,7 @@
           1.自动发送答谢水友礼物弹幕+自动发送感谢房管开火弹幕；
         </li>
         <li style="font-family:等线; font-size:12pt; font-weight:bold; line-height:150%; margin:0pt 0pt 0pt 14pt; orphans:0; padding-left:4pt; text-align:justify; text-indent:0pt; widows:0">
-          2.火力房间自动跳转前自动取关直播间功能（注：手动跳转无效）;
+          2.自定义私有弹幕后，是否启用AI弹幕与之混用（默认不启用，注：未定义私有弹幕则启用AI）；
         </li>
         <li style="font-family:等线; font-size:12pt; font-weight:bold; line-height:150%; margin:0pt 0pt 0pt 14pt; orphans:0; padding-left:4pt; text-align:justify; text-indent:0pt; widows:0">
           3.自定义设置自动跳转次数上限（默认每天100次）;
@@ -46,13 +47,12 @@
         <li style="font-family:等线; font-size:12pt; font-weight:bold; line-height:150%; margin:0pt 0pt 0pt 14pt; orphans:0; padding-left:4pt; text-align:justify; text-indent:0pt; widows:0">
           4.自定义设置火力全开结束后的等待时间（默认等待100s）；
         </li>
-        <li style="font-family:等线; font-size:12pt; font-weight:bold; line-height:150%; margin:0pt 0pt 0pt 14pt; orphans:0; padding-left:4pt; text-align:justify; text-indent:0pt; widows:0">
-          5.自定义私有弹幕后，是否启用AI弹幕与之混用（默认不启用，注：未定义私有弹幕则启用AI）；
-        </li>
+
       </ol>
       <p style="font-size:12pt; line-height:150%; margin:0pt; orphans:0; text-align:justify; widows:0">
-        <span style="font-family:等线; font-size:12pt;font-weight: 600;">后期还会增加一些有趣实用的功能，请多关注QQ群内动态！Here We Go，教程走起：</span>
+        <span style="font-family:等线; font-size:12pt;font-weight: 600;">原🀄自动取关🀄功能现在已经改为默认设置了(非牌子和特殊关注房间，脚本抢完丸子跑路会自动取关)，后期还会增加一些有趣实用的功能，请多关注QQ群内动态！Here We Go，教程走起：</span>
       </p>
+
       <h2 style="font-size:14pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
         <span style="font-family:'等线 Light'; font-size:14pt; font-weight:bold">1、自动答谢礼物弹幕+感谢房管开火弹幕，使用图文如下：</span></h2>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
@@ -67,9 +67,9 @@
         <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_1.png" width="100%"></td><td>&nbsp;&nbsp;</td>
         <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_2.png" width="100%"></td>
       </tr></table>
-      <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
+      <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 10px 20px; orphans:0; text-align:justify; text-indent:-21pt;">
         <span style="font-family:等线; font-size:12pt">b)</span>
-        <span style="font-family:等线; font-size:12pt">输入框填写“🀄礼物致谢🀄”，只要包含这几个特殊字符就可以了，大家可以</span>
+        <span style="font-family:等线; font-size:12pt">输入框填写“🀄礼物致谢🀄”，只要包含这几个特殊字符就可以了，大家可以</span><br>
         <span style="background-color:#ffff00; color:#ff0000; font-family:等线; font-size:12pt">复制这里</span>
         <span style="background-color:#ffff00; color:#ff0000; font-family:Wingdings; font-size:10.5pt"></span>
         <span style="font-family:等线; font-size:12pt">🀄礼物致谢🀄</span>
@@ -86,6 +86,7 @@
         <span style="font-family:等线; font-size:12pt">d)</span>
         <span style="font-family:等线; font-size:12pt">使用上述的礼物致谢功能，需要记得选择弹幕轰炸哦。</span>
       </p>
+      <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt; widows:0">
         <span style="font-family:等线; font-size:12pt">e)</span>
         <span style="font-family:等线; font-size:12pt">下面是实际效果图，大家欣赏下;</span>
       </p>
@@ -93,14 +94,32 @@
         <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_5.png" width="100%"></td><td>&nbsp;&nbsp;</td>
         <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_6.png" width="100%"></td>
       </tr></table>      
-      <p style="margin:0pt; orphans:0; text-align:justify; line-height: 20px; widows:0">
+      <p style="margin:0pt; orphans:0; text-align:justify; line-height: 25px; widows:0">
         <span style="font-family:等线; font-size:12pt">f)</span>
         <span style="background-color:#ffff00; font-family:等线; font-size:12pt; font-weight:bold">使用注意：</span>
         <span style="font-family:等线; font-size:12pt">如果房间有火力全开的话，还会自动发AI或云弹幕，但谢礼弹幕的优先级是最高的，谢礼弹幕时间间隔一般在10s±5左右（外加自己和上一条自己弹幕间隔数随机2~5个），所以有可能漏掉礼物横幅展示时间较短的礼物（比如一张办卡等）; 如果不使用斗鱼的屏蔽小礼物的话，也会有感谢弹幕的，建议非房管用暂时还是屏蔽掉吧。不然刷弹幕太多了容易霸屏！</span>
       </p>
       <p style="margin-left:20px; orphans:0; widows:0">
         <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_7.png" width="336" height="221" alt="" style="-aw-left-pos:0pt; -aw-rel-hpos:column; -aw-rel-vpos:paragraph; -aw-top-pos:0pt; -aw-wrap-type:inline;"/></p>
-      <h2 style="font-size:14pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
+
+
+      <h2 style="font-size:16pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
+        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">2、自定义私有弹幕与AI混用功能</span>
+      </h2>
+      <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
+        <span style="font-family:等线; font-size:12pt">a)</span>
+        <span style="font-family:等线; font-size:12pt">在已经设置了自定义的弹幕库的前提下，是否启用AI弹幕与之混用。之所以保留这个功能，主要是预防前期私有云弹幕的弹幕量较少，拿AI沙雕萌新来凑数是最实用的了！默认是不开启的，(若您没有定制私有云弹幕，那么AI弹幕是默认开启的);</span>
+      <p style="margin:5px 0 10px 20px; orphans:0; text-align:justify; widows:0">
+        <span style="background-color:#ffff00; color:#ff0000; font-family:等线; font-size:12pt">这里复制</span>
+        <span style="background-color:#ffff00; color:#ff0000; font-family:Wingdings; font-size:10.5pt"></span>
+        <span style="font-family:等线; font-size:12pt">🀄弹幕混用🀄</span>
+      </p>         
+      </p>      
+      <table style="margin-left: 20px;"><tr>
+        <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_15.png" width="100%"></td><td>&nbsp;&nbsp;</td>
+        <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_16.png" width="100%"></td>
+      </tr></table>
+<!--       <h2 style="font-size:14pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
         <span style="font-family:'等线 Light'; font-size:14pt; font-weight:bold">2、自动取关功能</span>
       </h2>
       <p style="margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt; line-height: 20px;">
@@ -126,26 +145,29 @@
         <span style="font-family:'Segoe UI Symbol'; font-size:12pt">4)</span>
         <span style="background-color:#ffff00; font-family:等线; font-size:12pt; font-weight:bold">使用注意：</span>
         <span style="font-family:等线; font-size:12pt">在自己当前喜欢并关注的直播间，直接开启自动跳转功能时，也会取关当前的主播，所以建议先手动点击开火按钮，到下个直播间再开自动脚本跑。</span>
-      </p>
+      </p> -->
+
       <h2 style="font-size:14pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
         <span style="font-family:'等线 Light'; font-size:14pt; font-weight:bold">3、自定义火力跳转次数上限功能</span>
       </h2>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
         <span style="font-family:'Segoe UI Symbol'; font-size:12pt">a)</span>
         <span style="font-family:等线; font-size:12pt; font-weight:normal;line-height: 20px;">自定义每天火力全开的跳转次数上限，默认是每天自动跳转上限是100次，下图中的150即是用户配置的自动跳转次数上限阈值，数值根据自己的需求自定义。图中这个数值(一定要注意格式，箭头后是纯数字，箭头不可缺失，可以有空格，单独存放)；参数取值范围：1~随心所欲大；</span>
+      <p style="margin:5px 0 10px 20px; orphans:0; text-align:justify; widows:0">
+        <span style="background-color:#ffff00; color:#ff0000; font-family:等线; font-size:12pt">这里复制</span>
+        <span style="background-color:#ffff00; color:#ff0000; font-family:Wingdings; font-size:10.5pt"></span>
+        <span style="font-family:等线; font-size:12pt">🀄跳转上限🀄▶150</span>
+      </p>           
       <table style="margin-left: 20px;"><tr>
         <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_10.png" width="100%"></td><td>&nbsp;&nbsp;</td>
         <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_11.png" width="100%"></td>
       </tr></table>
-      <p style="margin-left: 20px; orphans:0; text-align:justify; widows:0">
-        <span style="background-color:#ffff00; color:#ff0000; font-family:等线; font-size:12pt">这里复制</span>
-        <span style="background-color:#ffff00; color:#ff0000; font-family:Wingdings; font-size:10.5pt"></span>
-        <span style="font-family:等线; font-size:12pt">🀄跳转上限🀄▶</span>
-      </p>      
+   
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
         <span style="font-family:等线; font-size:12pt">b)</span>
         <span style="font-family:等线; font-size:12pt">斑竹的建议大号即花过钱的账户，最好别超过200次， 10级以下小号或没怎么充钱的账户小于100次。这个是个人经验，仅供参考，被系统禁言了，可别找我算账哦，禁言也不要惊慌，可以去斑竹的github找解决办法，找客服也没用。</span>
       </p>
+
 
       <h2 style="font-size:16pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
         <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">4、自定义火力全开停止后等待时间</span>
@@ -153,16 +175,16 @@
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
         <span style="font-family:等线; font-size:12pt">a)</span>
         <span style="font-family:等线; font-size:12pt">自定义设置火力全开结束后的等待时间，下图的数值120表示如果等待火力全开时间超过120s,则自动跳转寻找新的火力全开直播间，默认时间等待100s。(一定要注意格式，箭头后是纯数字，箭头不可缺失，可以有空格，单独存放)；参数取值范围：1~随心所欲大；</span>
-      </p>      
+      </p>
+      <p style="margin:5px 0 10px 20px; orphans:0; text-align:justify; widows:0">
+        <span style="background-color:#ffff00; color:#ff0000; font-family:等线; font-size:12pt">这里复制</span>
+        <span style="background-color:#ffff00; color:#ff0000; font-family:Wingdings; font-size:10.5pt"></span>
+        <span style="font-family:等线; font-size:12pt">🀄火力等待🀄▶120</span>
+      </p>         
       <table style="margin-left: 20px;"><tr>
         <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_12.png" width="100%"></td><td>&nbsp;&nbsp;</td>
         <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_13.png" width="100%"></td>
       </tr></table>
-      <p style="margin-left: 20px; orphans:0; text-align:justify; widows:0">
-        <span style="background-color:#ffff00; color:#ff0000; font-family:等线; font-size:12pt">这里复制</span>
-        <span style="background-color:#ffff00; color:#ff0000; font-family:Wingdings; font-size:10.5pt"></span>
-        <span style="font-family:等线; font-size:12pt">🀄火力等待🀄▶</span>
-      </p> 
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
         <span style="font-family:等线; font-size:12pt">b)</span>
         <span style="background-color:#ffff00; font-family:等线; font-size:12pt; font-weight:bold">使用注意:</span>
@@ -173,22 +195,6 @@
         <span style="font-family:等线; font-size:10.5pt"></span>
       </p>
 
-      <h2 style="font-size:16pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
-        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">5、自定义私有弹幕与AI混用功能</span>
-      </h2>
-      <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
-        <span style="font-family:等线; font-size:12pt">a)</span>
-        <span style="font-family:等线; font-size:12pt">在已经设置了自定义的弹幕库的前提下，是否启用AI弹幕与之混用。之所以保留这个功能，主要是预防前期私有云弹幕的弹幕量较少，拿AI沙雕萌新来凑数是最实用的了！默认是不开启的，(若您没有定制私有云弹幕，那么AI弹幕是默认开启的)</span>
-      </p>      
-      <table style="margin-left: 20px;"><tr>
-        <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_15.png" width="100%"></td><td>&nbsp;&nbsp;</td>
-        <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_16.png" width="100%"></td>
-      </tr></table>
-      <p style="margin-left: 20px; orphans:0; text-align:justify; widows:0">
-        <span style="background-color:#ffff00; color:#ff0000; font-family:等线; font-size:12pt">这里复制</span>
-        <span style="background-color:#ffff00; color:#ff0000; font-family:Wingdings; font-size:10.5pt"></span>
-        <span style="font-family:等线; font-size:12pt">🀄弹幕混用🀄</span>
-      </p> 
 
       <h2 style="font-size:16pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">特别说明</span></h2>
       <ol type="1" style="margin:0pt; padding-left:0pt">
