--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ $(function(){//极速 	#FFBBFF
 		'even' :'⚡⚡⚡⚡⚡⚡天雷诛邪⚡⚡⚡⚡⚡⚡'		
 	},{
 		'months' : 8,
-		'times' :'<span style="color:red;">楼底镇压大恶人-武林恶名[乔木**]</sapn>',
+		'times' :'<span style="color:red;">楼底镇压大恶人-武林恶名[乔二郎**]</sapn>',
 		'even' :'<span style="color:#EE3B3B;">白嫖偶的脚本，还多次侮辱作者大大，这种无赖大恶人，必须镇压九幽冥火之地狱，焚魂灼魄！</sapn>'
 	},{
 		'months' : 8,
